[package]
name = "remo-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
strip = "symbols"
lto = true
opt-level = "z"

[dependencies]
failure = "0.1.8"
futures-channel = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
log = "0.4.17"
env_logger = "0.11.6"
base64 = "0.22.1"
clap = { version = "4.4.18", features = ["derive"] }
axum = { version = "0.7.9", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5.2"
argon2 = "0.5.3"

[dev-dependencies]
tokio-tungstenite = "0.26.1"
